# route53-clone

./: .gitignore  DECISIONS.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py  seed.py  seed_data.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  ids.py  security.py
backend/app/models/: __init__.py  dns_record.py  hosted_zone.py  session.py  user.py
backend/app/repositories/: dns_record.py  hosted_zone.py  session.py  user.py
backend/app/routers/: auth.py  dns_records.py  hosted_zones.py  stats.py
backend/app/schemas/: auth.py  dns_record.py  hosted_zone.py  pagination.py  stats.py
backend/app/services/: activity.py  auth.py  dns_record.py  hosted_zone.py  stats.py  zone_bootstrap.py
backend/app/validators/: hostname.py  ip.py  registry.py  structured.py
backend/tests/: conftest.py  test_activity.py  test_auth.py  test_dns_records.py  test_hosted_zones.py  test_stats.py  test_validators.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(console)/: layout.tsx
frontend/app/login/: page.tsx
frontend/components/shell/: app-shell.tsx  breadcrumbs.tsx  (+3 more)
frontend/hooks/: use-dns-record-mutations.ts  use-dns-records.ts  use-hosted-zone-mutations.ts  use-hosted-zones.ts  use-keyboard-shortcut.ts  use-stats.ts
frontend/providers/: app-providers.tsx  auth-provider.tsx  breadcrumb-provider.tsx  notifications-provider.tsx  query-provider.tsx  theme-provider.tsx
(+53 files in other folders)
